--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=news
+DB_USERNAME=news
+DB_PASSWORD=verysecret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,3 +57,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WEB_DOCKER_PORT=1515
+DB_DOCKER_PORT=3315
+REDIS_DOCKER_PORT=6379
+REDIS_DOCKER_PASSWORD=verysecret
