implement comment with queue redis connection

--- a/.env.example
+++ b/.env.example
@@ -18,14 +18,14 @@ DB_PASSWORD=verysecret
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=redis
+REDIS_PASSWORD=verysecret
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
