--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/passport": "^11.9",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
         "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
